--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
   "name": "SpriteSheetDemo",
-  "version": "0.0.1",
-  "description": "TexturePacker打包雪碧图演示项目",
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "雪碧图高效开发流程演示项目",
+  "main": "index.html",
+  "homepage": "https://github.com/txiejun/SpriteSheetDemo",
   "scripts": {
     "start":"http-server -p 80"
   },
-  "author": "txiejun",
-  "license": "ISC",
-  "devDependencies": {
-
+  "author": {
+    "name": "txiejun",
+    "email": "txiejun@126.com",
+    "url": "https://github.com/txiejun/"
   },
-  "dependencies": {
-
-  }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/txiejun/SpriteSheetDemo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/txiejun/SpriteSheetDemo/issues"
+  },
+  "license": "ISC",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "keywords": [
+    "spritesheet",
+    "TexturePacker",
+    "css",
+    "Koala"
+  ]
 }
